--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -14,3 +14,10 @@
 .backToHome {
   margin: 3rem 0 0;
 }
+
+.privacyPolicy {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
