--- a/styles/global.css
+++ b/styles/global.css
@@ -10,9 +10,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #000000;
-  color: white;
+  background-color: lightgrey;
 }
+
 
 .navbar {
   padding: 0;
